--- a/package.json
+++ b/package.json
@@ -19,7 +19,15 @@
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@syncfusion/ej2-angular-richtexteditor": "^18.3.35",
+    "angular-timeago": "^0.4.6",
+    "bootstrap": "^4.5.2",
+    "javascript-time-ago": "^2.2.2",
+    "jquery": "^3.5.1",
+    "ngx-toastr": "9.1.1",
+    "popper.js": "1.14.6",
     "rxjs": "~6.4.0",
+    "time-ago-pipe": "^1.3.2",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
